# ai-atlas-nexus-extensions

./: .gitignore  README.md
extension-template/: cookiecutter.json
extension-template/{{cookiecutter.extension_repo_name}}/: README.md  pyproject.toml
extension-template/{{cookiecutter.extension_repo_name}}/src/{{cookiecutter.extension_slug}}/: __init__.py  main.py
ran-ares-integration/: MANIFEST.in  README.md  pyproject.toml
ran-ares-integration/src/ran_ares_integration/: __init__.py  main.py
ran-ares-integration/src/ran_ares_integration/assets/: __init__.py  connectors.yaml  human_jailbreaks.json  strategies.json
ran-ares-integration/src/ran_ares_integration/assets/knowledge_graph/: risk_to_ares_mappings.yaml
ran-ares-integration/src/ran_ares_integration/assets/mappings/: evaluations.csv  evaluations.yaml  goals.csv  goals.yaml  risk_to_ares.csv  risk_to_ares.yaml  risk_to_ares_configs.yaml  strategies.csv  strategies.yaml
ran-ares-integration/src/ran_ares_integration/datamodel/: risk_to_ares_ontology.py  target_connector_ontology.py
ran-ares-integration/src/ran_ares_integration/schema/: risk_to_ares.yaml  target_connector.yaml
ran-ares-integration/src/ran_ares_integration/utils/: data_utils.py  riskares2linkml.py
